# openhouse-bot

./: .gitignore  README.md  _install.py  ai_telegram_bot.py  check_db.py  chrome_driver_install.py  cloud_job.py  cloudbuild.yaml  config.yaml.dist  config_wizard.py  docker-compose.yaml  install.bat  install.sh  main.py  openhouse.py  pyproject.toml  setup.py  test_crawl.py  test_crawl2.py  test_health.py
.github/workflows/: linter.yml  tests.yml  types.yml
openhouse/: abstract_crawler.py  abstract_processor.py  ai_brain.py  ai_discovery.py  argument_parser.py  bot_events.py  captcha_solver.py  chrome_wrapper.py  cli.py  config.py  crawler_runner.py  default_processors.py  filter.py  gmaps_duration_processor.py  googlecloud_idmaintainer.py  heartbeat.py  hunter.py  idmaintainer.py  learning_memory.py  logging.py  processor.py  smart_crawler.py  time_utils.py  user_prefs.py  web_hunter.py  webdriver_crawler.py
openhouse/captcha/: capmonster_solver.py  imagetyperz_solver.py  twocaptcha_solver.py
openhouse/crawler/: degewo.py  gesobau.py  gewobag.py  howoge.py  idealista.py  immobiliare.py  immobilienscout.py  immowelt.py  kleinanzeigen.py  llm_crawler.py  stadtundland.py  subito.py  vrmimmo.py  wbm.py  wggesucht.py
openhouse/web/: __init__.py  (+2 more)
test/: dummy_crawler.py  test_chrome_wrapper.py  test_config.py  test_config_env.py  test_config_wizard.py  test_gmaps_duration_processor.py  test_googlecloud_idmaintainer.py  test_heartbeat.py  test_hunter.py  test_id_maintainer.py  test_processor.py  test_statistics_view.py  test_time_utils.py  test_web_interface.py
(+22 files in other folders)
